--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TreeItem?>
 
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1"
-            xmlns="http://javafx.com/javafx/10.0.1" fx:controller="by.silverscreen.controller.HumanController">
+            fx:controller="by.silverscreen.controller.HumanController">
     <children>
         <TreeTableView fx:id="humanTreeTableView" layoutX="5.0" layoutY="5.0" prefHeight="340.0" prefWidth="590.0"
                        showRoot="false" stylesheets="@styles.css">
